# Estoque_De_Sorveteria

./: CMakeLists.txt  README.md  main.html
docs/: index.html
inc/: Estoque.h  Interface.h  Loja.h  Produto.h
inc/interface/: UIadm.h  UIcliente.h  UIestoque.h  UIloja.h  UIuser.h
inc/negocio/: Adm.h  Cliente.h  Estoque.h  Produto.h  User.h
src/: Estoque.cpp  Interface.cpp  Loja.cpp  Produto.cpp  main.cpp
src/interfaces/: UIadm.cpp  UIcliente.cpp  UIestoque.cpp  UIloja.cpp  UIuser.cpp
src/negocios/: Adm.cpp  Cliente.cpp  Estoque.cpp  Loja.cpp  Produto.cpp  User.cpp
